# pipeup-cli

./: Cargo.toml  requirements.txt  setup_test.sh
src/: main.rs  stream_processor.rs  websocket.rs
